--- a/.env
+++ b/.env
@@ -1,4 +1,13 @@
-#THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/main/obsidian.css
-#THEME=https://github.com/kepano/obsidian-minimal/blob/master/obsidian.css
-#BASE_THEME=light
+THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
+BASE_THEME=light
+SITE_NAME_HEADER=তপবন | Utsob's Digital Garden
+SITE_BASE_URL=https://topobon.utsob.me
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=true
+dgShowLocalGraph=true
+dgShowInlineTitle=true
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=true
