--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ BASE_THEME=light
 SITE_NAME_HEADER=তপবন | Utsob's Digital Garden
 SITE_BASE_URL=https://topobon.utsob.me
 dgHomeLink=true
-dgPassFrontmatter=false
+dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=true
 dgShowInlineTitle=true
