--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 THEME=https://raw.githubusercontent.com/chetachiezikeuzor/Yin-and-Yang-Theme/HEAD/obsidian.css
 BASE_THEME=light
-SITE_NAME_HEADER=তপবন | Forest-Hermitage
+SITE_NAME_HEADER=তপোবন | Forest-Hermitage
 SITE_BASE_URL=https://topobon.utsob.me
 dgHomeLink=true
 dgPassFrontmatter=true
