--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ dgHomeLink=true
 dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=true
-dgShowInlineTitle=false
+dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
