refactored theme generation

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npm-run-all build:sass --parallel watch:*",
+        "start": "npm-run-all build:theme build:sass --parallel watch:*",
         "watch:sass": "sass --watch src/site/styles:dist/styles",
         "watch:eleventy": "cross-env ELEVENTY_ENV=dev eleventy --serve",
         "build:eleventy": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=4096 eleventy",
         "build:sass": "sass src/site/styles:dist/styles",
+        "build:theme": "node src/site/get-theme.js",
         "build": "npm-run-all build:*",
         "postbuild": "node src/site/lunr-index.js"
     },
