--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=light
 SITE_NAME_HEADER=তপোবন • Hermitage
 SITE_BASE_URL=https://topobon.utsob.me
-dgHomeLink=true
+dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
 dgShowLocalGraph=true
