--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sass": "^1.49.9"
     },
     "dependencies": {
+        "@11ty/eleventy-img": "^2.0.1",
         "@azure/storage-blob": "^12.8.0",
         "@octokit/core": "^4.1.0",
         "@sindresorhus/slugify": "^1.1.0",
