--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npm-run-all build:theme build:sass --parallel watch:*",
+        "start": "npm-run-all build:sass --parallel watch:*",
         "watch:sass": "sass --watch src/site/styles:dist/styles",
         "watch:eleventy": "cross-env ELEVENTY_ENV=dev eleventy --serve",
         "build:eleventy": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=4096 eleventy",
         "build:sass": "sass src/site/styles:dist/styles",
-        "build:theme": "node src/site/get-theme.js",
         "build": "npm-run-all build:*",
         "postbuild": "node src/site/lunr-index.js"
     },
@@ -23,20 +22,20 @@
         "sass": "^1.49.9"
     },
     "dependencies": {
-        "@11ty/eleventy-img": "^2.0.1",
         "@azure/storage-blob": "^12.8.0",
         "@octokit/core": "^4.1.0",
         "@sindresorhus/slugify": "^1.1.0",
-        "axios": "^0.26.1",
-        "dotenv": "^10.0.0",
+        "axios": "^1.2.2",
+        "dotenv": "^16.0.3",
         "eleventy-favicon": "^1.1.2",
         "eleventy-plugin-toc": "^1.1.5",
         "fs-file-tree": "^1.1.1",
         "gray-matter": "^4.0.3",
         "lunr": "^2.3.9",
-        "markdown-it": "^12.3.2",
+        "markdown-it": "^13.0.1",
         "markdown-it-attrs": "^4.1.6",
         "markdown-it-footnote": "^3.0.3",
+        "markdown-it-hashtag": "^0.4.0",
         "markdown-it-mathjax3": "^4.3.1",
         "markdown-it-plantuml": "^1.4.1",
         "markdown-it-task-checkbox": "^1.0.6"
