--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=light
 SITE_NAME_HEADER=তপোবন • Hermitage
-SITE_BASE_URL=https://.utsob.me
+SITE_BASE_URL=https://hermitage.utsob.me
 dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
