--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "watch:sass": "sass --watch src/site/styles:dist/styles",
         "watch:eleventy": "cross-env ELEVENTY_ENV=dev eleventy --serve",
         "build:eleventy": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=4096 eleventy",
-        "build:sass": "sass src/site/styles:dist/styles",
+        "build:sass": "sass src/site/styles/:dist/styles",
         "get-theme": "node src/site/get-theme.js",
         "build": "npm-run-all get-theme build:*",
         "postbuild": "node src/site/lunr-index.js"
