--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=light
 SITE_NAME_HEADER=Hermitage
 SITE_BASE_URL=https://hermitage.utsob.me
-MATURITY_DEFAULT=1
-MATURITY_TITLE=true
-MATURITY_FILETREE=true
-MATURITY_INTERNAL_LINKS=true
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=true
+NOTE_ICON_FILETREE=true
+NOTE_ICON_INTERNAL_LINKS=true
 dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
