--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=light
 SITE_NAME_HEADER=Hermitage
 SITE_BASE_URL=https://hermitage.utsob.me
-NOTE_ICON_DEFAULT=
+NOTE_ICON_DEFAULT=1
 NOTE_ICON_TITLE=true
 NOTE_ICON_FILETREE=true
 NOTE_ICON_INTERNAL_LINKS=true
