--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,8 @@
     "routes": [
         { "handle": "filesystem" },
         { "src": "/(.*)", "status": 404, "dest": "/404" }
-      ]
+      ],
+      "github": {
+        "silent": true
+      }
 }
