--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@ THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
 BASE_THEME=light
 SITE_NAME_HEADER=Hermitage
 SITE_BASE_URL=https://hermitage.utsob.me
+SHOW_CREATED_TIMESTAMP=true
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=1
 NOTE_ICON_TITLE=true
 NOTE_ICON_FILETREE=true
