--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
         "markdown-it-anchor": "^8.6.7",
         "markdown-it-attrs": "^4.1.6",
         "markdown-it-footnote": "^3.0.3",
+        "markdown-it-mark": "^3.0.1",
         "markdown-it-mathjax3": "^4.3.1",
         "markdown-it-plantuml": "^1.4.1",
-        "markdown-it-task-checkbox": "^1.0.6",
-        "sharp": "^0.31.3"
+        "markdown-it-task-checkbox": "^1.0.6"
     }
 }
