--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ NOTE_ICON_DEFAULT=1
 NOTE_ICON_TITLE=true
 NOTE_ICON_FILETREE=true
 NOTE_ICON_INTERNAL_LINKS=true
+NOTE_ICON_BACK_LINKS=true
 dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
