--- a/.env
+++ b/.env
@@ -10,6 +10,7 @@ NOTE_ICON_TITLE=true
 NOTE_ICON_FILETREE=true
 NOTE_ICON_INTERNAL_LINKS=true
 NOTE_ICON_BACK_LINKS=true
+STYLE_SETTINGS_CSS="body.css-settings-manager { --tag-radius: 0px; --inline-title-size: 2.3em; --h1-size: 2.5em; --h2-size: 2em; --h3-size: 1.6em; --h4-size: 1.3em; --h5-size: 1.1em; --h6-size: 1.1em; --h6-variant: small-caps; --h6-weight: 400; --h5-weight: 700; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }"
 dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
