feat: ✨ note icons in the graph

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ BASE_THEME=light
 dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
-dgShowLocalGraph=true
+dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
