--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ BASE_THEME=light
 dgHomeLink=false
 dgPassFrontmatter=true
 dgShowBacklinks=true
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
